# bright-network-coding-challenge

./: README.md  conftest.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/application/common/: interfaces.py  services.py
src/application/common/interfaces/: interfaces.py
src/application/queries/: get_opportunities.py
src/cli/: main.py
src/common/: utils.py
src/domain/: value_objects.py
src/infrastructure/: repositories.py
tests/application/queries/: test_get_opportunities.py
tests/cli/: test_main.py
tests/infrastucture/: test_repositories.py
tests/integration/cli/: test_main.py
tests/unit/application/queries/: test_get_opportunities.py
tests/unit/infrastucture/: test_repositories.py
