[tool.poetry]
name = "opportunity-finder"
version = "0.1.0"
description = ""
authors = ["Rob Jack Stewart <robjackstewart@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

httpx = "^0.27.0"
asyncclick = "^8.1.7.2"
[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "src.cli.main:cli"
